Fixed commit * Fixed Modal success window on mobile * Fix burger-menu

--- a/src/style/mobile.css
+++ b/src/style/mobile.css
@@ -13,6 +13,16 @@
   background: transparent;
 }
 
+.header-navber_wrapper,
+.navbar > .container-fluid{
+  justify-content: end;
+}
+
+.header-navbar_list{
+  align-items: start;
+  padding-left: 20px;
+}
+
 .form-label + .form-control{
   padding: 10px 0 10px 15px;
   margin-bottom: 5px;
@@ -68,6 +78,24 @@
 .competition-procedure-section::after,
 .competition-procedure-section::before{
   background: none;
+  display: none;
+}
+
+.address-without-map{
+  width: 100%;
+}
+
+.platforms-section::before{
+  display: none;
+  background: none;
+}
+
+.required-skill{
+  background: none;
+}
+
+.form > label{
+  width: 100%;
 }
 
 .skill-card-list--item span{
@@ -103,7 +131,7 @@
 }
 
 .timer-info{
-  top: -67px;
+  top: 109px;
 }
 
 .hello-section{
