--- a/src/style/style.css
+++ b/src/style/style.css
@@ -41,6 +41,13 @@ body{
   outline: 0;
 }
 
+.modal-body{
+  height: 448px;
+  justify-content: center;
+}
+
+
+
 .show{
   visibility: initial;
 }
@@ -52,6 +59,7 @@ body{
 .modal-close::before{
   content: '';
   position: absolute;
+  z-index: 5;
   top: 12px;
   right: 12px;
   width: 31px;
@@ -63,6 +71,11 @@ body{
 
 .modal-text__mobile {
   display: none;
+  margin-top: 30px;
+}
+
+.modal-text__desktop{
+  margin-top: 30px;
 }
 /* Header */
 
@@ -151,7 +164,7 @@ body{
 }
 
 .preview-text--discribe{
-  width: 100%;
+  width: 50%;
 }
 
 .preview-text--discribe > h1{
@@ -829,6 +842,14 @@ body{
   background-color: #fff;
   text-align: center;
   border: 1px solid #000;
+}
+
+.header-navbar_wrapper{
+  justify-content: end;
+}
+
+.nav-collapser{
+  order: 2;
 }
 
 .address_title{
